--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Kaizen Agent Framework</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Kaizen Agent Framework - Dynamic self-evolving system for user engagement and improvement tracking.">
+  <title>Kaizen Agent Framework</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id='root'></div>
+  <header>
+    <div class="header-container">
+      <img src="logo.png" alt="Kaizen Logo" class="logo">
+      <h1>Kaizen Agent Framework</h1>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <h2>Welcome to the Kaizen Agent Framework</h2>
+      <p>Empowering continuous improvement and dynamic engagement with innovative self-evolving systems.</p>
+      <a href="https://x.com/Kaizen_Ai_Sol" class="cta-button">Follow us on X</a>
+    </section>
+
+    <section class="features">
+      <h2>Features</h2>
+      <ul>
+        <li><strong>Self-Evolution:</strong> Track and implement improvements dynamically.</li>
+        <li><strong>Engagement:</strong> Foster user participation with gamified experiences.</li>
+        <li><strong>Scalability:</strong> Built for future-ready systems and seamless integration.</li>
+      </ul>
+    </section>
+
+    <section class="contact">
+      <h2>Contact Us</h2>
+      <p>Have questions? Reach out to us at <a href="mailto:support@kaizenframework.com">support@kaizenframework.com</a>.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Kaizen Agent Framework. All rights reserved.</p>
+  </footer>
 </body>
 </html>
